--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ button:hover {
 .side-menu {
   position: fixed;
   top: 0;
-  left: -250px; /* Initially off-screen */
+  left: 0; /* Initially in view */
   width: 250px;
   height: 100%;
   background-color: #333;
