--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ button:hover {
   padding: 10px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
   z-index: 1000;
+  display: none;
 }
 
 .side-menu a {
