--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ button:hover {
   cursor: pointer;
   font-size: 30px;
   color: #fff;         /* Make the hamburger icon white */
+  width: 40px;
+  height: 40px;
 }
 
 /* Menu items styling */
