--- a/style.css
+++ b/style.css
@@ -3,17 +3,18 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f9f9f9;
+  background-color: #eaf9ff;
 }
 
 header {
-  background-color: #6200ea;
+  background-color: #002839;
   color: white;
   padding: 10px 20px;
+  height: 30px;
 }
 
 main {
-  padding: 20px;
+  padding: 30px;
   text-align: center;
 }
 
