--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #eaf9ff;
+  background-color: #e89d6e;
 }
 
 header {
-  background-color: #002839;
+  background-color: #864014;
   color: white;
   padding: 10px 20px;
   height: 30px;
@@ -36,7 +36,7 @@ textarea {
 button {
   padding: 10px 20px;
   margin: 10px;
-  background-color: #6200ea;
+  background-color: ##864014;
   color: white;
   border: none;
   border-radius: 4px;
@@ -44,11 +44,11 @@ button {
 }
 
 button:hover {
-  background-color: #4500b5;
+  background-color: #5b2b0e;
 }
 
 .highlight {
-  background-color: yellow;
+  background-color: #b0541b;
   font-weight: bold;
 }
 
@@ -95,7 +95,7 @@ button:hover {
   min-height: 150px;
   width: 90%;
   font-size: 16px;
-  background-color: #f9f9f9;
+  background-color: #f6dbc9;
   white-space: pre-wrap;
   overflow-y: auto;
 }
