--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ textarea {
 button {
   padding: 10px 20px;
   margin: 10px;
-  background-color: ##864014;
+  background-color: #864014;
   color: white;
   border: none;
   border-radius: 4px;
