--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* General Styles */
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  margin: 10px;
+  padding: 40px;
   background-color: #e89d6e;
 }
 
@@ -14,7 +14,7 @@ header {
 }
 
 main {
-  padding: 50px;
+  padding: 30px 10px;
   text-align: left;
 }
 #transcription {
