--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 10px;
-  padding: 40px;
+  padding: 0;
   background-color: #e89d6e;
 }
 
@@ -14,7 +14,7 @@ header {
 }
 
 main {
-  padding: 30px 10px;
+  padding: 30px;
   text-align: left;
 }
 #transcription {
