--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
   font-family: Arial, sans-serif;
-  margin: 10px;
+  margin: 0;
   padding: 0;
   background-color: #e89d6e;
 }
