--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ button:hover {
 
 #output {
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 40px 10px;
   min-height: 150px;
   width: 90%;
   font-size: 16px;
