changed background color to white: testing

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #e89d6e;
+  background-color: white;
 }
 
 header {
