--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ button:hover {
   right: 10px;
   top: 40px;
   background-color: white;
-  border-radius: 5px;
-  padding: 10px;
+  border-radius: 12px;
+  padding: 10px 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
