--- a/style.css
+++ b/style.css
@@ -14,9 +14,19 @@ header {
   height: 30px;
 }
 
+/* Styling for the app name in the header */
+header .app-name {
+  font-size: 2rem; /* Adjust the size */
+  font-weight: 900; /* Bold */
+  color: white;
+  text-align: left; 
+  margin: 0; /* Remove any default margin */
+
+}
+
 main {
   padding: 30px;
-  text-align: left;
+  text-align: center;
 }
 
 #transcription {
@@ -129,11 +139,6 @@ body.dark-theme button:hover {
 
 body.dark-theme .highlight {
   background-color: #bbb;
-}
-
-/* Reduce spacing between h1 and h4 */
-h1 {
-  margin-bottom: 5px; /* Reduce space below h1 */
 }
 
 h4 {
