--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
   background-color: #864014;
   color: white;
   padding: 10px 20px;
-  height: 40px;
+  height: 30px;
 }
 
 /* Styling for the app name in the header */
@@ -19,7 +19,8 @@ header .app-name {
   font-size: 2rem; /* Adjust the size */
   font-weight: 900; /* Bold */
   color: white;
-  text-align: left; 
+  text-align: left;
+  padding: 5px;
 }
 
 main {
