--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body.dark-theme .highlight {
 
 h4 {
   margin-top: 3px; /* Remove default spacing above h4 */
-  font-family: 'Lobster', sans-serif; /* Apply Lobster font */
+  font-family: 'Pacifico', sans-serif; /* Apply Lobster font */
   font-size: 1.5rem;
   text-align: center; /* Optional: center the text */
   font-weight: 400;
