--- a/style.css
+++ b/style.css
@@ -143,6 +143,11 @@ body.dark-theme .highlight {
   background-color: #bbb;
 }
 
+body.dark-theme #language-dropdown {
+	background-color: #555;
+  color: white;
+}
+
 h4 {
   margin-top: 3px; /* Remove default spacing above h4 */
   font-family: 'Pacifico', sans-serif; /* Apply Lobster font */
@@ -187,11 +192,6 @@ h4 {
   border: none;
   border-radius: 12px; /* Rounded corners */
   cursor: pointer;
-  font-size: 16px;
-  font-family: Arial, sans-serif; /* Match button font */
-  appearance: none; /* Removes default dropdown styling */
-  -webkit-appearance: none; /* Safari fix */
-  -moz-appearance: none; /* Firefox fix */
   text-align: center; /* Centers text */
 }
 
