--- a/style.css
+++ b/style.css
@@ -46,8 +46,9 @@ textarea {
   margin-top: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 10px 10px;
   border-radius: 12px; /* Rounded corners */
+  
 }
 
 button {
